Fix vertical spacing issue with main tabs in admin UI

--- a/byceps/static/style/admin.css
+++ b/byceps/static/style/admin.css
@@ -290,12 +290,16 @@ a.box:hover {
 
 /* tabs above main content area */
 
+.main-tabs:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
 .main-tabs ol {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   list-style: none;
-  margin: 0 0 1.5rem 0;
+  margin: 0;
   padding: 0;
 }
 
